force-app/main/default/objects/Aqua_Check_Ticket__c/Aqua_Check_Ticket__c.object-meta.xml
<CustomObject>
    <label>Aqua Check Ticket</label>
    <nameField>
        <displayFormat>ACT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Check Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>