force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Aqua_Community__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Aqua Check Tickets</relationshipLabel>
    <relationshipName>Aqua_Check_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>