force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Aqua Check Tickets (Assigned To)</relationshipLabel>
    <relationshipName>Aqua_Check_Tickets_User</relationshipName>
    <type>Lookup</type>
</CustomField>