force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Billing_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reason_Code__c</fullName>
    <label>Billing Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Material (Stolen)</fullName>
            </value>
            <value>
                <fullName>Damaged or Malfunctioning (Warranty)</fullName>
            </value>
            <value>
                <fullName>Additional Coverage Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>