force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_Notes__c</fullName>
    <label>Check Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>