force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Check Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>