force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Device_Functioning__c.field-meta.xml
<CustomField>
    <fullName>Device_Functioning__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Device Functioning</label>
    <type>Checkbox</type>
</CustomField>