force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Device_Present__c.field-meta.xml
<CustomField>
    <fullName>Device_Present__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Device Present</label>
    <type>Checkbox</type>
</CustomField>