force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Final_Run_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>Final_Run_Time_Min__c</fullName>
    <description>Calculated run time in minutes after applying the monthly watering schedule percentage.</description>
    <label>Final Run Time (Min)</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>