force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Landscape_Score__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Score__c</fullName>
    <label>Landscape Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>