force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Aqua Check Tickets</relationshipLabel>
    <relationshipName>Aqua_Check_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>