force-app/main/default/objects/Aqua_Check_Ticket__c/fields/System_Tampered__c.field-meta.xml
<CustomField>
    <fullName>System_Tampered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Tampered</label>
    <type>Checkbox</type>
</CustomField>