force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Turf_Condition_Score__c.field-meta.xml
<CustomField>
    <fullName>Turf_Condition_Score__c</fullName>
    <label>Turf Condition Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>