force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Watering_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Watering_Instructions__c</fullName>
    <description>Snapshot of the resolved watering schedule (ramp + seasonal) at the time this Check Ticket was created.</description>
    <label>Watering Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>