force-app/main/default/objects/Aqua_Check_Ticket__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Aqua Check Tickets (Work Order)</relationshipLabel>
    <relationshipName>Aqua_Check_Tickets_WO</relationshipName>
    <type>Lookup</type>
</CustomField>